--- a/app/src/main/res/layout/fragment_reserve_m.xml
+++ b/app/src/main/res/layout/fragment_reserve_m.xml
@@ -63,7 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <ListView
             android:id="@+id/myCafeMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
