--- a/app/src/main/res/layout/fragment_user__order.xml
+++ b/app/src/main/res/layout/fragment_user__order.xml
@@ -30,17 +30,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/cafemenulist"
             android:layout_width="wrap_content"
             android:layout_height="203dp"
             android:layout_marginBottom="14dp"
-            android:listSelector="@drawable/textview_deco"
             android:textSize="15dp"
             app:layout_constraintBottom_toTopOf="@+id/textViewcon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/textView"/>
+        <!--android:listSelector="@drawable/textview_deco"-->
 
         <RadioGroup
             android:id="@+id/radioGroup"
