--- a/app/src/main/res/layout/menuitem.xml
+++ b/app/src/main/res/layout/menuitem.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
 
     <LinearLayout
@@ -13,8 +13,8 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/menuitem"
-            android:layout_width="250dp"
+            android:id="@+id/menutext"
+            android:layout_width="237dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
@@ -22,12 +22,15 @@
             android:textColor="#000000"
             android:textSize="15dp" />
 
-        <ImageView
+
+        <ImageButton
             android:id="@+id/imageadd"
-            android:layout_width="33dp"
+            android:layout_width="25dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:text="0"
+            android:background="#00000000"
+            android:padding="0sp"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/add" />
 
         <TextView
@@ -35,15 +38,19 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:gravity="center_vertical"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="0"
             android:textColor="#000000"
-            android:textSize="10dp" />
+            android:textSize="20dp" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/imagesub"
-            android:layout_width="30dp"
+            android:layout_width="25dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
+            android:background="#00000000"
+            android:padding="0sp"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/subtract" />
 
 
