--- a/app/src/main/res/menu/manager_activity_main_drawer.xml
+++ b/app/src/main/res/menu/manager_activity_main_drawer.xml
@@ -9,10 +9,11 @@
             android:title="카페 등록/변경" />
         <item
             android:id="@+id/nav_cafemenu"
+            android:icon="@drawable/ic_coffee"
             android:title="카페 메뉴 추가/삭제"/>
         <item
             android:id="@+id/nav_reserved"
-            android:icon="@drawable/ic_coffee"
+            android:icon="@drawable/ic_check"
             android:title="완료 주문 내역" />
         <item
             android:id="@+id/nav_congestion"
