--- a/app/src/main/res/menu/user_activity_main_drawer.xml
+++ b/app/src/main/res/menu/user_activity_main_drawer.xml
@@ -9,11 +9,11 @@
             android:title="지도로 카페찾기" />
         <item
             android:id="@+id/nav_reserve"
-            android:icon="@drawable/ic_coffee"
+            android:icon="@drawable/ic_reserve"
             android:title="이름으로 카페찾기" />
         <item
             android:id="@+id/nav_menu"
-            android:icon="@drawable/ic_reserve"
+            android:icon="@drawable/ic_check"
             android:title="주문 내역" />
         <item
             android:id="@+id/nav_star"
