--- a/app/src/main/res/layout/fragment_namesearch.xml
+++ b/app/src/main/res/layout/fragment_namesearch.xml
@@ -12,11 +12,12 @@
 
         <EditText
             android:id="@+id/editText"
-            android:layout_width="393dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:ems="10"
             android:hint="Cafe Name"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:layout_weight="1"/>
 
         <ListView
             android:id="@+id/listView"
