--- a/app/src/main/res/layout/map_search.xml
+++ b/app/src/main/res/layout/map_search.xml
@@ -11,13 +11,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="57dp"
+        android:layout_height="60dp"
         android:orientation="horizontal">
 
         <EditText
             android:id="@+id/editPlace"
-            android:layout_weight="8"
-            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
 
@@ -27,8 +27,7 @@
 
         <ImageButton
             android:id="@+id/button"
-            android:layout_weight="1"
-            android:layout_width="0dp"
+            android:layout_width="60dp"
             android:layout_height="match_parent"
 
             android:scaleType="centerInside"
