--- a/app/src/main/res/layout/fragment_congestion.xml
+++ b/app/src/main/res/layout/fragment_congestion.xml
@@ -11,21 +11,22 @@
         android:id="@+id/congestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
         android:text="혼잡도 설정"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="120dp"
-        app:layout_constraintTop_toBottomOf="@+id/congestion"
-        app:layout_constraintStart_toStartOf="@+id/congestion"
-        app:layout_constraintEnd_toEndOf="@+id/congestion">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <RadioGroup
             android:id="@+id/radioGroup"
