--- a/app/src/main/res/layout/fragment_reserve.xml
+++ b/app/src/main/res/layout/fragment_reserve.xml
@@ -1,37 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ReserveFragment">
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/reserved"
-            android:layout_width="380dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/common_google_signin_btn_text_dark_disabled"
             android:gravity="center"
+            android:layout_marginBottom="20dp"
             android:text="주문 예약 내역"
-            android:textSize="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/orderlist"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textSize="30dp" />
 
         <ListView
             android:id="@+id/orderlist"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/reserved" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
 
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
-</ScrollView>
+</android.support.constraint.ConstraintLayout>
