--- a/app/src/main/res/layout/name_search.xml
+++ b/app/src/main/res/layout/name_search.xml
@@ -14,8 +14,9 @@
 
             <EditText
                 android:id="@+id/editText"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:hint="Cafe Name" />
