--- a/app/src/main/res/layout/menuitem.xml
+++ b/app/src/main/res/layout/menuitem.xml
@@ -14,7 +14,17 @@
 
         <TextView
             android:id="@+id/menutext"
-            android:layout_width="237dp"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="Text"
+            android:textColor="#000000"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="80dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
